# AI_Floor_Cleaning_Robot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/agent_item/: __init__.py  main.py
src/agent_item/agent/: react_agent.py
src/agent_item/agent/tools/: agent_tools.py  middleware.py
src/agent_item/config/: agent.yml  chroma.yml  rag.yml
src/agent_item/models/: factory.py
src/agent_item/rag/: rag_service.py  vector_store.py
src/agent_item/services/: downloader.py
src/agent_item/utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_handler.py
tests/: test_import.py
