[project]
name = "agent-item"
version = "0.1.0"
description = "A ReAct agent for floor-cleaning robot knowledge assistance, built with LangChain, LangGraph, RAG and Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.24",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
]

[project.scripts]
agent-item = "agent_item:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
